feat: add get thirdparty transaction handler (#39)
* feat: add get thirdparty transaction handler

* chore: add tests

* chore: update package-lock

* chore: reduce jest worker threads
